Finally got those damn navigation dots working.

--- a/dev/index.html
+++ b/dev/index.html
@@ -24,19 +24,11 @@
   <header>
     <nav class="sticky">
     	<section class="nav-items right">
-    		<ul>
-    			<li><a href="#about">about</a></li>
-	        <li><a href="#work">work</a></li>
-	        <li><a href="#contact">contact</a></li>
+    		<ul class="dot-nav dot-nav--switch">
+    			<li class="current"><a href="#about">about<div class="dot"></div></a></li>
+	        <li><a href="#work">work<div class="dot"></div></a></li>
+	        <li><a href="#contact">contact<div class="dot"></div></a></li>
     		</ul>
-    		<div class="dot-nav dot-nav--switch">
-		      <ul>
-		        <li class="current"><a data-anchor="about" href="#">About</a></li>
-		        <li><a data-anchor="work" href="#">Work</a></li>
-		        <li><a data-anchor="contact" href="#">Contact</a></li>
-		        <li><!-- dummy dot --></li>
-		      </ul>
-		     </div>
       </section>
     </nav>
 	  <section class="hero hero-video">
@@ -56,7 +48,39 @@
 	  	<div class="medium-6 columns">
 	       <img class="bio-img" src="./img/jeanie-bio-pic.jpg" />
 	    </div>
-	  	<div class="medium-6 columns bio-content">
+	  	<div class="medium-6 columns">
+	  	    <h2>Hey, I'm Jeanie.</h2>
+	        <hr>
+	        <p>
+	          I almost always play "Rogue" class and pick the fire Pokémon starter. I have a penchant for live music and cold brew coffee. My favorite spots in the Bay Area are <a href="https://goo.gl/maps/lOrpH" target="_blank">this wall</a> and <a href="https://goo.gl/maps/SGeVd" target="_blank">this exhibit</a>.
+	        </p>
+	        <p>
+	        </p> 
+	  	</div>
+	  </div>  	
+  </section>
+  <section id="work" class="section-padding">
+		<div class="row no-margin no-padding">
+	  	<div class="medium-6 columns">
+	       <img class="bio-img" src="./img/jeanie-bio-pic.jpg" />
+	    </div>
+	  	<div class="medium-6 columns">
+	  	    <h2>Hey, I'm Jeanie.</h2>
+	        <hr>
+	        <p>
+	          I almost always play "Rogue" class and pick the fire Pokémon starter. I have a penchant for live music and cold brew coffee. My favorite spots in the Bay Area are <a href="https://goo.gl/maps/lOrpH" target="_blank">this wall</a> and <a href="https://goo.gl/maps/SGeVd" target="_blank">this exhibit</a>.
+	        </p>
+	        <p>
+	        </p> 
+	  	</div>
+	  </div>  	
+  </section>
+  <section id="contact" class="section-padding">
+		<div class="row no-margin no-padding">
+	  	<div class="medium-6 columns">
+	       <img class="bio-img" src="./img/jeanie-bio-pic.jpg" />
+	    </div>
+	  	<div class="medium-6 columns">
 	  	    <h2>Hey, I'm Jeanie.</h2>
 	        <hr>
 	        <p>
