--- a/dev/index.html
+++ b/dev/index.html
@@ -10,6 +10,7 @@
   <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
   <!-- Styles -->
+  <link rel="stylesheet" href="css/normalize.min.css" />
   <link rel="stylesheet" href="css/foundation.min.css" />
   <link rel="stylesheet" href="css/main.min.css" />
   <link rel="stylesheet" href="css/foundation-icon-fonts/foundation-icons.css" />
@@ -22,8 +23,8 @@
 </head>
 <body>
   <header>
-    <nav class="sticky">
-    	<section class="nav-items right">
+    <nav class="sticky even">
+    	<section class="nav-items">
     		<ul class="dot-nav dot-nav--switch">
     			<li class="current"><a href="#about">about<div class="dot"></div></a></li>
 	        <li><a href="#work">work<div class="dot"></div></a></li>
