Fixed overflow issue with video hero.

--- a/dev/index.html
+++ b/dev/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <header>
-    <nav class="sticky even">
+    <nav class="sticky">
     	<section class="nav-items">
     		<ul class="dot-nav dot-nav--switch">
     			<li class="current"><a href="#about">about<div class="dot"></div></a></li>
