--- a/dev/index.html
+++ b/dev/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/normalize.min.css" />
   <link rel="stylesheet" href="css/foundation.min.css" />
   <link rel="stylesheet" href="css/main.min.css" />
-  <link rel="stylesheet" href="css/foundation-icon-fonts/foundation-icons.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" />
   <!-- JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
