Animated nav bar with scrolling to different sections.

--- a/dev/index.html
+++ b/dev/index.html
@@ -44,7 +44,7 @@
 		  </div>
 		</section>
   </header>
-  <section id="about" class="section-padding">
+  <section id="about" class="main-content section-padding">
 		<div class="row no-margin no-padding">
 	  	<div class="medium-6 columns">
 	       <img class="bio-img" src="./img/jeanie-bio-pic.jpg" />
@@ -60,7 +60,7 @@
 	  	</div>
 	  </div>  	
   </section>
-  <section id="work" class="section-padding">
+  <section id="work" class="main-content section-padding">
 		<div class="row no-margin no-padding">
 	  	<div class="medium-6 columns">
 	       <img class="bio-img" src="./img/jeanie-bio-pic.jpg" />
@@ -76,7 +76,7 @@
 	  	</div>
 	  </div>  	
   </section>
-  <section id="contact" class="section-padding">
+  <section id="contact" class="main-content section-padding">
 		<div class="row no-margin no-padding">
 	  	<div class="medium-6 columns">
 	       <img class="bio-img" src="./img/jeanie-bio-pic.jpg" />
