--- a/dev/index.html
+++ b/dev/index.html
@@ -45,51 +45,72 @@
 		</section>
   </header>
   <section id="about" class="main-content section-padding">
-		<div class="row no-margin no-padding">
+		<div class="row">
 	  	<div class="medium-6 columns">
-	       <img class="bio-img" src="./img/jeanie-bio-pic.jpg" />
-	    </div>
-	  	<div class="medium-6 columns">
-	  	    <h2>Hey, I'm Jeanie.</h2>
+	  	    <h2>This site</h2>
 	        <hr>
 	        <p>
-	          I almost always play "Rogue" class and pick the fire Pokémon starter. I have a penchant for live music and cold brew coffee. My favorite spots in the Bay Area are <a href="https://goo.gl/maps/lOrpH" target="_blank">this wall</a> and <a href="https://goo.gl/maps/SGeVd" target="_blank">this exhibit</a>.
+	          Lorem ipsum bla bla bla.
 	        </p>
 	        <p>
 	        </p> 
 	  	</div>
-	  </div>  	
+	  </div> 
+    <div class="row team-row">
+        <h2>Meet the "J" Team</h2>
+        <hr>
+        <div class="medium-4 columns">
+          <h2>Me</h2>
+          <h3>// developer
+          <br>// shark afficionado</h3>
+          <p>Hey, I'm Jeanie. I almost always plays "Rogue" class and picks the fire Pokémon starter. I have a penchant for live music and cold brew coffee. My favorite spots in the Bay Area are <a href="https://goo.gl/maps/lOrpH" target="_blank">this wall</a> and <a href="https://goo.gl/maps/SGeVd" target="_blank">this exhibit</a>.</p>
+        </div>
+        <div class="medium-4 columns">
+          <h2>Jo</h2>
+          <h3>// moral support
+          <br>// tasty beverage</h3>
+          <p>Jo always gets the team through a tough spot and is probably the hottest of the team. She's always the first one to say, "We've got this, guys!" Her interests include mugs.</p>
+        </div>
+        <div class="medium-4 columns">
+          <h2>Jelly</h2>
+          <h3>// pain-in-the-butt
+          <br>// husky mix</h3>
+          <p>Jelly doesn't do too much other than sit on laptops and lick your face.</p>
+        </div>
+      </div>
+    </div> 	
   </section>
   <section id="work" class="main-content section-padding">
-		<div class="row no-margin no-padding">
-	  	<div class="medium-6 columns">
-	       <img class="bio-img" src="./img/jeanie-bio-pic.jpg" />
-	    </div>
-	  	<div class="medium-6 columns">
-	  	    <h2>Hey, I'm Jeanie.</h2>
-	        <hr>
-	        <p>
-	          I almost always play "Rogue" class and pick the fire Pokémon starter. I have a penchant for live music and cold brew coffee. My favorite spots in the Bay Area are <a href="https://goo.gl/maps/lOrpH" target="_blank">this wall</a> and <a href="https://goo.gl/maps/SGeVd" target="_blank">this exhibit</a>.
-	        </p>
-	        <p>
-	        </p> 
-	  	</div>
-	  </div>  	
+		<div class="row">
+      In the past, I've worked at Razorfish, Northwestern University, and ZURB. I'm currently working on building some great things at Dropbox in San Francisco. You can find some of my work below.
+	  </div>
+    <div class="row portfolio-row">
+      <div class="medium-6 columns">
+        Foundation for Apps
+      </div>
+      <div class="medium-6 columns">
+        Foundation for Emails
+      </div>
+      <div class="medium-6 columns">
+        Foundation for Sites
+      </div>
+      <div class="medium-6 columns">
+        Rainbow Ipsum
+      </div>
+    </div>
+    <div class="row talks-row">
+      I also talk a lot about the importance of diversity in tech and how to increase the access to STEM fields to young women. If you would like me to speak at a conference, reach out to me.
+      <ul>
+        <li>GDI: Oakland</li>
+        <li>Lesbians Who Tech Summit</li>
+        <li>AngularJS</li>
+        <li>CSS Web Conference (whatever the name of this was)</li>
+        <li>Waffle JS</li>
+      </ul>
+    </div>
   </section>
   <section id="contact" class="main-content section-padding">
-		<div class="row no-margin no-padding">
-	  	<div class="medium-6 columns">
-	       <img class="bio-img" src="./img/jeanie-bio-pic.jpg" />
-	    </div>
-	  	<div class="medium-6 columns">
-	  	    <h2>Hey, I'm Jeanie.</h2>
-	        <hr>
-	        <p>
-	          I almost always play "Rogue" class and pick the fire Pokémon starter. I have a penchant for live music and cold brew coffee. My favorite spots in the Bay Area are <a href="https://goo.gl/maps/lOrpH" target="_blank">this wall</a> and <a href="https://goo.gl/maps/SGeVd" target="_blank">this exhibit</a>.
-	        </p>
-	        <p>
-	        </p> 
-	  	</div>
+		<div class="row">
 	  </div>  	
   </section>
   <footer class="text-center">
@@ -98,7 +119,6 @@
         <p>Jeanie Chung is a developer currently located in the Bay Area.</p>
         <i class="fi-heart"></i> <a href="mailto:hey@jeaniechung.com">Send love!</a>
         <p class="copyright">© 2015 | Powered mainly by Blue Bottle coffee and choco tacos.</p>
-        <!-- <span app-version></span> -->
       </div>
       <div class="medium-4 columns">
         <div class="social-links">
