Some file sass clean up.

--- a/dev/index.html
+++ b/dev/index.html
@@ -23,8 +23,8 @@
 </head>
 <body>
   <header>
-    <nav class="sticky">
-    	<section class="nav-items">
+    <nav class="nav">
+    	<section class="nav__items">
     		<ul class="dot-nav dot-nav--switch">
     			<li class="current"><a href="#about">about<div class="dot"></div></a></li>
 	        <li><a href="#work">work<div class="dot"></div></a></li>
@@ -33,9 +33,9 @@
       </section>
     </nav>
 	  <section class="hero hero-video">
-	    <video autoplay loop>
+<!-- 	    <video autoplay loop>
 				<source src="./img/kuroshio.mp4" type="video/mp4">
-			</video> 
+			</video>  -->
 		  <div class="row intro">
 		    <div class="small-centered medium-uncentered medium-6 large-7 columns">
 		      <h1>dive in.</h1>
@@ -44,18 +44,18 @@
 		  </div>
 		</section>
   </header>
-  <section id="about" class="main-content section-padding">
+  <section id="about" class="content__section">
 		<div class="row">
+      <h2>This site</h2>
+      <hr>
 	  	<div class="medium-6 columns">
-	  	    <h2>This site</h2>
-	        <hr>
 	        <p>
 	          Lorem ipsum bla bla bla.
 	        </p>
 	        <p>
-	        </p> 
+	        </p>
 	  	</div>
-	  </div> 
+	  </div>
     <div class="row team-row">
         <h2>Meet the "J" Team</h2>
         <hr>
@@ -78,9 +78,9 @@
           <p>Jelly doesn't do too much other than sit on laptops and lick your face.</p>
         </div>
       </div>
-    </div> 	
+    </div>
   </section>
-  <section id="work" class="main-content section-padding">
+  <section id="work" class="content__section">
 		<div class="row">
       In the past, I've worked at Razorfish, Northwestern University, and ZURB. I'm currently working on building some great things at Dropbox in San Francisco. You can find some of my work below.
 	  </div>
@@ -104,14 +104,14 @@
         <li>GDI: Oakland</li>
         <li>Lesbians Who Tech Summit</li>
         <li>AngularJS</li>
-        <li>CSS Web Conference (whatever the name of this was)</li>
+        <li>JS Summit http://environmentsforhumans.com/2015/javascript-summit/</li>
         <li>Waffle JS</li>
       </ul>
     </div>
   </section>
-  <section id="contact" class="main-content section-padding">
+  <section id="contact" class="content__section">
 		<div class="row">
-	  </div>  	
+	  </div>
   </section>
   <footer class="text-center">
     <div class="row">
