Mass added portfolio effects and styles. Future Jeanie, clean it up later. :|

--- a/dev/index.html
+++ b/dev/index.html
@@ -56,22 +56,25 @@
 	        </p>
 	  	</div>
 	  </div>
-    <div class="row team-row">
+    <div class="row row__team">
         <h2>Meet the "J" Team</h2>
         <hr>
         <div class="medium-4 columns">
+          <img class="team__profpic" src="./img/jeanie-bio-pic.jpg" />
           <h2>Me</h2>
           <h3>// developer
           <br>// shark afficionado</h3>
           <p>Hey, I'm Jeanie. I almost always plays "Rogue" class and picks the fire Pokémon starter. I have a penchant for live music and cold brew coffee. My favorite spots in the Bay Area are <a href="https://goo.gl/maps/lOrpH" target="_blank">this wall</a> and <a href="https://goo.gl/maps/SGeVd" target="_blank">this exhibit</a>.</p>
         </div>
         <div class="medium-4 columns">
+          <img class="team__profpic" src="./img/jo.png" />
           <h2>Jo</h2>
           <h3>// moral support
           <br>// tasty beverage</h3>
           <p>Jo always gets the team through a tough spot and is probably the hottest of the team. She's always the first one to say, "We've got this, guys!" Her interests include mugs.</p>
         </div>
         <div class="medium-4 columns">
+          <img class="team__profpic" src="./img/jelly.png" />
           <h2>Jelly</h2>
           <h3>// pain-in-the-butt
           <br>// husky mix</h3>
@@ -84,18 +87,42 @@
 		<div class="row">
       In the past, I've worked at Razorfish, Northwestern University, and ZURB. I'm currently working on building some great things at Dropbox in San Francisco. You can find some of my work below.
 	  </div>
-    <div class="row portfolio-row">
-      <div class="medium-6 columns">
-        Foundation for Apps
+    <div class="row portfolio">
+      <div class="large-6 medium-6 columns">
+          <figure class="effect-bubba">
+            <img src="./img/juggle-yeti.svg" />
+            <figcaption>
+              <h2>Foundation for Sites</h2>
+              <a target="_blank" href="https://github.com/zurb/foundation"></a>
+            </figcaption>
+          </figure>
       </div>
-      <div class="medium-6 columns">
-        Foundation for Emails
+      <div class="large-6 medium-6 columns">
+          <figure class="effect-bubba">
+            <img src="./img/yeti-hero.svg" />
+            <figcaption>
+              <h2>Foundation for Apps</h2>
+              <a target="_blank" href="https://github.com/zurb/foundation-apps"></a>
+            </figcaption>
+          </figure>
       </div>
-      <div class="medium-6 columns">
-        Foundation for Sites
+      <div class="large-6 medium-6 columns">
+          <figure class="effect-bubba">
+            <img src="./img/inky-point.svg" />
+            <figcaption>
+              <h2>Foundation for Emails</h2>
+              <a target="_blank" href="https://github.com/zurb/foundation-emails"></a>
+            </figcaption>
+          </figure>
       </div>
-      <div class="medium-6 columns">
-        Rainbow Ipsum
+      <div class="large-6 medium-6 columns">
+          <figure class="effect-bubba">
+            <img src="./img/rainbow.png" />
+            <figcaption>
+              <h2>Rainbow Ipsum</h2>
+              <a target="_blank" href="http://rainbowipsum.com"></a>
+            </figcaption>
+          </figure>
       </div>
     </div>
     <div class="row talks-row">
