Added fun little footer shuffle for the copyright.

--- a/dev/index.html
+++ b/dev/index.html
@@ -145,7 +145,7 @@
       <div class="medium-8 columns footer-info">
         <p>Jeanie Chung is a developer currently located in the Bay Area.</p>
         <i class="fi-heart"></i> <a href="mailto:hey@jeaniechung.com">Send love!</a>
-        <p class="copyright">© 2015 | Powered mainly by Blue Bottle coffee and choco tacos.</p>
+        <p id="copyright">© 2015 | Powered mainly by Blue Bottle coffee and choco tacos.</p>
       </div>
       <div class="medium-4 columns">
         <div class="social-links">
