--- a/dev/index.html
+++ b/dev/index.html
@@ -11,7 +11,7 @@
   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
   <!-- Styles -->
   <link rel="stylesheet" href="css/normalize.min.css" />
-  <!-- <link rel="stylesheet" href="css/foundation.min.css" /> -->
+  <link rel="stylesheet" href="css/foundation.min.css" />
   <link rel="stylesheet" href="css/main.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" />
   <!-- JS -->
@@ -45,17 +45,15 @@
 		</section>
   </header>
   <section id="about" class="section__content">
-		<div class="row">
+    <div class="row">
       <h2>This site</h2>
       <hr>
 	  	<div class="medium-6 columns">
 	        <p>
 	          Lorem ipsum bla bla bla.
 	        </p>
-	        <p>
-	        </p>
 	  	</div>
-	  </div>
+    </div>
     <div class="row row--team">
         <h2>Meet the "J" Team</h2>
         <hr>
