Style changes and content changes.

--- a/dev/index.html
+++ b/dev/index.html
@@ -50,7 +50,7 @@
       <hr>
 	  	<div class="medium-6 columns">
 	        <p>
-	          Lorem ipsum bla bla bla.
+	          On this site, you'll find a little bit about me and my work. Currently, I'm not looking for work, but always looking to make great connections in the Bay area.
 	        </p>
 	  	</div>
     </div>
@@ -76,16 +76,17 @@
           <h2 class="row__name--center">Jelly</h2>
           <h3>// pain-in-the-butt
           <br>// husky mix</h3>
-          <p>Jelly doesn't do too much other than sit on laptops and lick your face.</p>
+          <p>Jelly doesn't do too much other than sit on laptops and lick your face. Nonetheless, a very important part of the team.</p>
         </div>
       </div>
     </div>
   </section>
   <section id="work" class="section__content">
-    <h2>Things I've Done</h2>
-    <hr>
 		<div class="row">
-      In the past, I've worked at Razorfish, Northwestern University, and ZURB. I'm currently working on building some great things at Dropbox in San Francisco. You can find some of my work below.
+      <h2>Things I've Done</h2>
+      <hr>
+      I'm currently working on building some great things at Dropbox in San Francisco.
+      In the past, I've worked at Razorfish, Northwestern University, and ZURB. You can find some of my work below or take a look at my <a href="https://www.dropbox.com/s/cozchuo7l1n5be4/ResumeJeanie.pdf" target="_blank">résumé</a>.
 	  </div>
     <div class="row portfolio">
       <div class="large-6 medium-6 columns">
@@ -125,10 +126,10 @@
           </figure>
       </div>
     </div>
-    <h2>Things I Talk About</h2>
-    <hr>
     <div class="row talks-row">
-      I also talk a lot about the importance of diversity in tech and how to increase the access to STEM fields to young women.
+      <h2>Etc.</h2>
+      <hr>
+      Outside of work, I lead the chapter of Girl Develop It in Oakland. Additionally, you'll find me attending or speaking at events like the ones listed below. I really love discussing the importance of diversity and inclusion in the tech industry or innovative usage of front-end technologies.
       <ul>
         <li>Grace Hopper Conference</li>
         <li>DreamForce</li>
@@ -142,6 +143,20 @@
   </section>
   <section id="contact" class="section__content">
 		<div class="row">
+      <h1>CONTACT ME HERERERERERE</h1>
+        <div class="social-links">
+          <ul>
+              <li>
+                <i class="fi-social-github"></i><a target="_blank" href="https://github.com/jeanieshark">  Github</a>
+              </li>
+              <li>
+                <i class="fi-social-twitter"></i><a target="_blank" href="https://twitter.com/jeanieshark">  Twitter</a>
+              </li>
+              <li>
+                <i class="fi-social-linkedin"></i><a target="_blank" href="https://www.linkedin.com/profile/view?id=129993573">  LinkedIn</a>
+              </li>
+          </ul>
+        </div>
 	  </div>
   </section>
   <footer class="text-center">
