Some clean up on portfolio padding.

--- a/dev/index.html
+++ b/dev/index.html
@@ -46,99 +46,106 @@
   </header>
   <section id="about" class="section__content">
     <div class="row">
-      <h2>This site</h2>
-      <hr>
-	  	<div class="medium-6 columns">
-	        <p>
-	          On this site, you'll find a little bit about me and my work. Currently, I'm not looking for work, but always looking to make great connections in the Bay area.
-	        </p>
+	  	<div class="medium-12 columns">
+        <h2>This site</h2>
+        <hr>
+        <p>
+          On this site, you'll find a little bit about me and my work. Currently, I'm not looking for work, but always looking to make great connections in the Bay area.
+        </p>
 	  	</div>
     </div>
     <div class="row row--team">
+      <div class="medium-12 columns">
         <h2>Meet the "J" Team</h2>
         <hr>
-        <div class="medium-4 columns">
-          <img class="row__profile-img" src="./img/jeanie-bio-pic.jpg" />
-          <h2 class="row__name--center">Me</h2>
-          <h3>// developer
-          <br>// shark afficionado</h3>
-          <p>Hey, I'm Jeanie. I almost always plays "Rogue" class and picks the fire Pokémon starter. I have a penchant for live music and cold brew coffee. My favorite spots in the Bay Area are <a href="https://goo.gl/maps/lOrpH" target="_blank">this wall</a> and <a href="https://goo.gl/maps/SGeVd" target="_blank">this exhibit</a>.</p>
-        </div>
-        <div class="medium-4 columns">
-          <img class="row__profile-img" src="./img/jo.png" />
-          <h2 class="row__name--center">Jo</h2>
-          <h3>// moral support
-          <br>// tasty beverage</h3>
-          <p>Jo always gets the team through a tough spot and is probably the hottest of the team. She's always the first one to say, "We've got this, guys!" Her interests include mugs.</p>
-        </div>
-        <div class="medium-4 columns">
-          <img class="row__profile-img" src="./img/jelly.png" />
-          <h2 class="row__name--center">Jelly</h2>
-          <h3>// pain-in-the-butt
-          <br>// husky mix</h3>
-          <p>Jelly doesn't do too much other than sit on laptops and lick your face. Nonetheless, a very important part of the team.</p>
-        </div>
+      </div>
+      <div class="medium-4 columns">
+        <img class="row__profile-img" src="./img/jeanie-bio-pic.jpg" />
+        <h2 class="row__name--center">Me</h2>
+        <h3>// developer
+        <br>// shark afficionado</h3>
+        <p>Hey, I'm Jeanie. I almost always plays "Rogue" class and picks the fire Pokémon starter. I have a penchant for live music and cold brew coffee. My favorite spots in the Bay Area are <a href="https://goo.gl/maps/lOrpH" target="_blank">this wall</a> and <a href="https://goo.gl/maps/SGeVd" target="_blank">this exhibit</a>.</p>
+      </div>
+      <div class="medium-4 columns">
+        <img class="row__profile-img" src="./img/jo.png" />
+        <h2 class="row__name--center">Jo</h2>
+        <h3>// moral support
+        <br>// tasty beverage</h3>
+        <p>Jo always gets the team through a tough spot and is probably the hottest of the team. She's always the first one to say, "We've got this, guys!" Her interests include mugs.</p>
+      </div>
+      <div class="medium-4 columns">
+        <img class="row__profile-img" src="./img/jelly.png" />
+        <h2 class="row__name--center">Jelly</h2>
+        <h3>// pain-in-the-butt
+        <br>// husky mix</h3>
+        <p>Jelly doesn't do too much other than sit on laptops and lick your face. Nonetheless, a very important part of the team.</p>
       </div>
     </div>
   </section>
   <section id="work" class="section__content">
 		<div class="row">
+      <div class="medium-12 columns">
       <h2>Things I've Done</h2>
       <hr>
       I'm currently working on building some great things at Dropbox in San Francisco.
       In the past, I've worked at Razorfish, Northwestern University, and ZURB. You can find some of my work below or take a look at my <a href="https://www.dropbox.com/s/cozchuo7l1n5be4/ResumeJeanie.pdf" target="_blank">résumé</a>.
+      </div>
 	  </div>
     <div class="row portfolio">
-      <div class="large-6 medium-6 columns">
-          <figure class="effect-bubba">
-            <img src="./img/juggle-yeti.svg" />
-            <figcaption>
-              <h2>Foundation for Sites</h2>
-              <a target="_blank" href="https://github.com/zurb/foundation"></a>
-            </figcaption>
-          </figure>
-      </div>
-      <div class="large-6 medium-6 columns">
-          <figure class="effect-bubba">
-            <img src="./img/yeti-hero.svg" />
-            <figcaption>
-              <h2>Foundation for Apps</h2>
-              <a target="_blank" href="https://github.com/zurb/foundation-apps"></a>
-            </figcaption>
-          </figure>
-      </div>
-      <div class="large-6 medium-6 columns">
-          <figure class="effect-bubba">
-            <img src="./img/inky-point.svg" />
-            <figcaption>
-              <h2>Foundation for Emails</h2>
-              <a target="_blank" href="https://github.com/zurb/foundation-emails"></a>
-            </figcaption>
-          </figure>
-      </div>
-      <div class="large-6 medium-6 columns">
-          <figure class="effect-bubba">
-            <img src="./img/rainbow.png" />
-            <figcaption>
-              <h2>Rainbow Ipsum</h2>
-              <a target="_blank" href="http://rainbowipsum.com"></a>
-            </figcaption>
-          </figure>
+      <div class="medium-12 columns">
+        <div class="medium-6 columns">
+            <figure class="effect-bubba">
+              <img src="./img/juggle-yeti.svg" />
+              <figcaption>
+                <h2>Foundation for Sites</h2>
+                <a target="_blank" href="https://github.com/zurb/foundation"></a>
+              </figcaption>
+            </figure>
+        </div>
+        <div class="medium-6 columns">
+            <figure class="effect-bubba">
+              <img src="./img/yeti-hero.svg" />
+              <figcaption>
+                <h2>Foundation for Apps</h2>
+                <a target="_blank" href="https://github.com/zurb/foundation-apps"></a>
+              </figcaption>
+            </figure>
+        </div>
+        <div class="medium-6 columns">
+            <figure class="effect-bubba">
+              <img src="./img/inky-point.svg" />
+              <figcaption>
+                <h2>Foundation for Emails</h2>
+                <a target="_blank" href="https://github.com/zurb/foundation-emails"></a>
+              </figcaption>
+            </figure>
+        </div>
+        <div class="medium-6 columns">
+            <figure class="effect-bubba">
+              <img src="./img/rainbow.png" />
+              <figcaption>
+                <h2>Rainbow Ipsum</h2>
+                <a target="_blank" href="http://rainbowipsum.com"></a>
+              </figcaption>
+            </figure>
+        </div>
       </div>
     </div>
-    <div class="row talks-row">
-      <h2>Etc.</h2>
-      <hr>
-      Outside of work, I lead the chapter of Girl Develop It in Oakland. Additionally, you'll find me attending or speaking at events like the ones listed below. I really love discussing the importance of diversity and inclusion in the tech industry or innovative usage of front-end technologies.
-      <ul>
-        <li>Grace Hopper Conference</li>
-        <li>DreamForce</li>
-        <li>GDI: Oakland</li>
-        <li>Lesbians Who Tech Summit</li>
-        <li>AngularJS</li>
-        <li>JS Summit http://environmentsforhumans.com/2015/javascript-summit/</li>
-        <li>Waffle JS</li>
-      </ul>
+    <div class="row">
+      <div class="medium-12 columns">
+        <h2>Etc.</h2>
+        <hr>
+        Outside of work, I lead the chapter of Girl Develop It in Oakland. Additionally, you'll find me attending or speaking at events like the ones listed below. I really love discussing the importance of diversity and inclusion in the tech industry or innovative usage of front-end technologies, so if you'd like to chat about that, feel free to reach out.
+        <ul>
+          <li>Grace Hopper Conference</li>
+          <li>DreamForce</li>
+          <li>GDI: Oakland</li>
+          <li>Lesbians Who Tech Summit</li>
+          <li>AngularJS</li>
+          <li>JS Summit http://environmentsforhumans.com/2015/javascript-summit/</li>
+          <li>Waffle JS</li>
+        </ul>
+      </div>
     </div>
   </section>
   <section id="contact" class="section__content">
